# deck

./: CMakeLists.txt  README
src/: CMakeLists.txt
src/deckqt/: CMakeLists.txt  DatabaseOptionsWidget.cpp  DatabaseOptionsWidget.hpp  DatabaseOptionsWidget.ui  DatabaseWidget.cpp  DatabaseWidget.hpp  DatabaseWidget.ui  FileSystemModel.cpp  FileSystemModel.hpp  GenericOptionsWidget.cpp  GenericOptionsWidget.hpp  GenericOptionsWidget.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OptionsDialog.cpp  OptionsDialog.hpp  OptionsDialog.ui  PeerOptionsWidget.cpp  PeerOptionsWidget.hpp  PeerOptionsWidget.ui  PlayListModel.cpp  PlayListModel.hpp  PlayListView.cpp  PlayListView.hpp  PlayListWidget.cpp  PlayListWidget.hpp  PlayListWidget.ui  TrackControlWidget.cpp  TrackControlWidget.hpp  TrackControlWidget.ui  TrackSetModel.cpp  TrackSetModel.hpp  main.cpp
src/libdeck/: CMakeLists.txt  MainPlayer.cpp  MainPlayer.hpp  Settings.cpp  Settings.hpp  Settings.proto
src/libdeck/audio/: AudioManager.cpp  AudioManager.hpp
src/libdeck/audio/decoder/: AbstractAudioDecoder.cpp  AbstractAudioDecoder.hpp  FAADDecoder.cpp  FAADDecoder.hpp  FFmpegDecoder.cpp  FFmpegDecoder.hpp  FLACDecoder.cpp  FLACDecoder.hpp  MADDecoder.cpp  MADDecoder.hpp  VorbisDecoder.cpp  VorbisDecoder.hpp
src/libdeck/audio/encoder/: AbstractAudioEncoder.cpp  AbstractAudioEncoder.hpp  VorbisEncoder.cpp  VorbisEncoder.hpp
src/libdeck/audio/output/: AbstractAudioOutput.cpp  AbstractAudioOutput.hpp  DummyAudioOutput.cpp  DummyAudioOutput.hpp  OpenALOutput.cpp  OpenALOutput.hpp  OpenSLESOutput.cpp  OpenSLESOutput.hpp
src/libdeck/audio/source/: AbstractAudioFileSource.cpp  AbstractAudioFileSource.hpp  ConnectionFileSource.cpp  ConnectionFileSource.hpp  HTTPFileSource.cpp  HTTPFileSource.hpp  LocalFileSource.cpp  LocalFileSource.hpp
src/libdeck/connection/: Connection.cpp  Connection.hpp  Connection.proto  ConnectionManager.cpp  ConnectionManager.hpp  DatabaseService.cpp  DatabaseService.hpp  FileService.cpp  FileService.hpp  Server.cpp  Server.hpp  Service.cpp  Service.hpp  Transfer.cpp  Transfer.hpp
src/libdeck/db/: Album.cpp  Album.hpp  Artist.cpp  Artist.hpp  Database.cpp  Database.hpp  Database.proto  DatabaseManager.cpp  DatabaseManager.hpp  PlayList.cpp  PlayList.hpp  Track.cpp  Track.hpp  TrackSet.cpp  TrackSet.hpp  TrackSourceInfo.cpp  TrackSourceInfo.hpp
src/libdeck/db/scanner/: Scanner.cpp  Scanner.hpp  ScannerManager.cpp  ScannerManager.hpp  ScannerTrackInfo.cpp  ScannerTrackInfo.hpp
tests/: CMakeLists.txt  test_scanner.cpp  test_scannertrackinfo.cpp  test_settings.cpp
